--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.21.5",
     "recoil": "^0.7.7",
+    "specificity": "^1.0.0",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
