v1 - packages updated and capacitor config package trapzedev/configure added

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 GENERATE_SOURCEMAP=true
-VITE_TITLE="Z percentage calculator"
-VITE_API_URL=''
+VITE_TITLE="ZTools"
+VITE_API_URL='https://ztools.zaions.com'
 # VITE_API_URL=''
 # VITE_API_URL=''
-VITE_CRYPTO_SECRET=''
+VITE_CRYPTO_SECRET='ztools-secret12398f3#F#$%%%%___2nf'
 VITE_GOOGLE_MAP_API_KEY=""
-VITE_API_URL_PROD=''
+VITE_API_URL_PROD='https://ztools.zaions.com'
