--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,7 @@
 {
-  "name": "zlink-ionic7-react-project",
-  "integrations": {
-    "capacitor": {}
-  },
-  "type": "react-vite"
+	"name": "ztools",
+	"integrations": {
+		"capacitor": {}
+	},
+	"type": "react-vite"
 }
