--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tanstack/react-query-devtools": "^4.35.7",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "commander": "^11.1.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
