--- a/package.json
+++ b/package.json
@@ -32,20 +32,21 @@
     "preinstall": "node -e \"if (require('path').basename(process.env.npm_execpath) === 'npm-cli.js') throw new Error('Please use Yarn for installation: yarn install')\""
   },
   "dependencies": {
-    "@capacitor/android": "5.5.0",
+    "@capacitor/android": "5.5.1",
     "@capacitor/app": "^5.0.6",
-    "@capacitor/core": "^5.5.0",
+    "@capacitor/core": "^5.5.1",
     "@capacitor/dialog": "^5.0.6",
-    "@capacitor/ios": "5.5.0",
+    "@capacitor/ios": "5.5.1",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/toast": "^5.0.6",
-    "@ionic/react": "^7.5.0",
-    "@ionic/react-router": "^7.5.0",
-    "@tanstack/react-query": "^4.35.7",
-    "@tanstack/react-query-devtools": "^4.35.7",
-    "axios": "^1.5.1",
+    "@ionic/core": "^7.5.4",
+    "@ionic/react": "^7.5.4",
+    "@ionic/react-router": "^7.5.4",
+    "@tanstack/react-query": "^5.8.3",
+    "@tanstack/react-query-devtools": "^5.8.3",
+    "axios": "^1.6.1",
     "classnames": "^2.3.2",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "ionicons": "^7.2.1",
@@ -57,37 +58,38 @@
     "react-responsive": "^9.0.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "react-select": "^5.7.7",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
-    "react-tooltip": "^5.21.5",
+    "react-tooltip": "^5.23.0",
     "recoil": "^0.7.7",
     "specificity": "^1.0.0",
-    "swiper": "^10.3.1"
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.5.0",
+    "@capacitor/cli": "5.5.1",
     "@trapezedev/configure": "^7.0.10",
-    "@types/crypto-js": "^4.1.2",
-    "@types/node": "^20.8.6",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
+    "@types/crypto-js": "^4.2.1",
+    "@types/node": "^20.9.0",
+    "@types/qs": "^6.9.10",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "@vitejs/plugin-react": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.51.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "lint-staged": "^15.0.1",
+    "lint-staged": "^15.1.0",
     "postcss": "^8.4.31",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11",
+    "vite": "^4.5.0",
     "vitest": "^0.34.6"
   }
 }
