updated, android app released

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^21.6.2",
-    "npm": "Please use PNPM (v8.15.7)",
-    "yarn": "Please use PNPM (v8.15.7)",
-    "pnpm": "^8.15.7"
+    "node": "^22.2.0",
+    "npm": "Please use PNPM (v9.0.6)",
+    "yarn": "Please use PNPM (v9.0.6)",
+    "pnpm": "^9.0.6"
   },
   "engineStrict": true,
   "scripts": {
@@ -26,9 +26,6 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "cypress.open": "cypress open",
-    "test.e2e": "cypress run",
-    "test.unit": "vitest",
     "lint": "eslint",
     "preinstall": "node -e \"if (require('path').basename(process.env.npm_execpath) === 'npm-cli.js') throw new Error('Please use Yarn for installation: yarn install')\"",
     "sync:apps-config": "trapeze run apps-config.yaml",
@@ -40,66 +37,64 @@
     "cap:open-android": "capacitor open android"
   },
   "dependencies": {
-    "@capacitor/android": "6.0.0",
+    "@capacitor/android": "6.1.2",
     "@capacitor/app": "^6.0.0",
-    "@capacitor/core": "^6.0.0",
+    "@capacitor/core": "^6.1.2",
     "@capacitor/dialog": "^6.0.0",
-    "@capacitor/ios": "6.0.0",
-    "@capacitor/preferences": "^6.0.0",
-    "@capacitor/toast": "^6.0.0",
-    "@ionic/core": "^8.0.0",
-    "@ionic/react": "^8.0.0",
-    "@ionic/react-router": "^8.0.0",
-    "@tanstack/react-query": "^5.29.2",
-    "@tanstack/react-query-devtools": "^5.29.2",
-    "axios": "^1.6.8",
+    "@capacitor/ios": "6.1.2",
+    "@capacitor/preferences": "^6.0.1",
+    "@capacitor/toast": "^6.0.1",
+    "@ionic/core": "^8.2.6",
+    "@ionic/react": "^8.2.6",
+    "@ionic/react-router": "^8.2.6",
+    "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query-devtools": "^5.51.23",
+    "axios": "^1.7.3",
     "classnames": "^2.5.1",
-    "commander": "^12.0.0",
+    "commander": "^12.1.0",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.10",
-    "formik": "^2.4.5",
-    "ionicons": "^7.3.1",
-    "qs": "^6.12.1",
+    "dayjs": "^1.11.12",
+    "formik": "^2.4.6",
+    "ionicons": "^7.4.0",
+    "qs": "^6.13.0",
     "rc-switch": "^4.1.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
-    "react-tooltip": "^5.26.3",
+    "react-tooltip": "^5.28.0",
     "recoil": "^0.7.7",
     "specificity": "^1.0.0",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "6.0.0",
+    "@capacitor/cli": "6.1.2",
     "@trapezedev/configure": "^7.0.10",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20.12.7",
+    "@types/node": "^22.1.0",
     "@types/qs": "^6.9.15",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "husky": "^9.0.11",
-    "jsdom": "^24.0.0",
-    "lint-staged": "^15.2.2",
-    "postcss": "^8.4.38",
+    "eslint-plugin-react": "^7.35.0",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
+    "postcss": "^8.4.41",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.9",
-    "vitest": "^1.5.0"
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.0"
   }
 }
