--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "type": "module",
   "engines": {
     "node": "^22.2.0",
-    "npm": "Please use PNPM (v9.0.6)",
-    "yarn": "Please use PNPM (v9.0.6)",
-    "pnpm": "^9.0.6"
+    "npm": "Please use YARN (v1.22.22)",
+    "yarn": "^1.22.22",
+    "pnpm": "Please use YARN (v1.22.22)"
   },
   "engineStrict": true,
   "scripts": {
@@ -38,63 +38,63 @@
   },
   "dependencies": {
     "@capacitor/android": "6.1.2",
-    "@capacitor/app": "^6.0.0",
+    "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.1.2",
-    "@capacitor/dialog": "^6.0.0",
+    "@capacitor/dialog": "^6.0.1",
     "@capacitor/ios": "6.1.2",
-    "@capacitor/preferences": "^6.0.1",
-    "@capacitor/toast": "^6.0.1",
-    "@ionic/core": "^8.2.6",
-    "@ionic/react": "^8.2.6",
-    "@ionic/react-router": "^8.2.6",
-    "@tanstack/react-query": "^5.51.23",
-    "@tanstack/react-query-devtools": "^5.51.23",
-    "axios": "^1.7.3",
+    "@capacitor/preferences": "^6.0.2",
+    "@capacitor/toast": "^6.0.2",
+    "@ionic/core": "^8.2.7",
+    "@ionic/react": "^8.2.7",
+    "@ionic/react-router": "^8.2.7",
+    "@tanstack/react-query": "^5.54.1",
+    "@tanstack/react-query-devtools": "^5.54.1",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "commander": "^12.1.0",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "ionicons": "^7.4.0",
     "qs": "^6.13.0",
     "rc-switch": "^4.1.0",
     "react": "^18.3.1",
-    "react-countdown": "^2.3.5",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
-    "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4",
+    "react-router": "^6.26.1",
+    "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
     "recoil": "^0.7.7",
     "specificity": "^1.0.0",
-    "swiper": "^11.1.9"
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "6.1.2",
     "@trapezedev/configure": "^7.0.10",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.5.3",
     "@types/qs": "^6.9.15",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^8.0.1",
-    "@typescript-eslint/parser": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.35.0",
-    "husky": "^9.1.4",
-    "lint-staged": "^15.2.8",
-    "postcss": "^8.4.41",
+    "eslint-plugin-react": "^7.35.2",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.45",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "vite": "^5.4.3"
   }
 }
