--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "lint-staged": "^15.4.3",
     "postcss": "^8.5.3",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "3.3.5",
     "typescript": "^5.8.2",
     "vite": "^6.2.0"
   }
