--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,101 @@ cypress/screenshots/**/*
 cypress/videos/**/*
 
 android/app/release
+
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.idea
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional eslint cache
+.eslintcache
+
+
+node_modules
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+/.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+/.DS_Store
+/.env*
+
+/npm-debug.log*
+/yarn-debug.log*
+/yarn-error.log*
+/debug.log
+
+
+.git-*
+
+/android/app/build
+android/app/release
+
+#IOS App files/folders to ignore
+ios/App/build
+ios/App/Pods
+ios/App/Podfile.lock
+ios/App/App/public
+ios/DerivedData
+ios/xcuserdata
+
+# Cordova plugins for Capacitor in IOS folder to ignore
+ios/capacitor-cordova-ios-plugins
+
+*.ignore.*
+
+.DS_Store
+
+project-record-ignore
+.history
+.idea
+*node_modules*
+
+
+*.env.*
+
+
+
+# Capacitor - Android
+android/app/build/
+android/app/release/
+android/capacitor.settings.gradle
+android/.idea/
+android/build/
+android/app/src/main/assets/public/
+
+# Capacitor - iOS
+ios/App/build/
+ios/App/Pods/
+ios/App/App/public/
+ios/DerivedData/
+ios/App.xcarchive/
+ios/App.xcworkspace/
+ios/.DS_Store
+
