updated and deployed on play store and released on test-flight, need to setup it's data in apple store before i can publish it there

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "css.format.enable": true,
-  "editor.formatOnSave": true,
-  "files.autoSave": "onFocusChange",
   "prettier.enable": true,
+  "editor.formatOnSave": true,
+  "files.autoSave": "onWindowChange",
   "cSpell.words": [
     "chatbubble",
     "Collabes",
@@ -19,5 +19,9 @@
     "Swiper",
     "videocam"
   ],
-  "svg.preview.background": "editor"
+  "svg.preview.background": "editor",
+  "editor.codeActionsOnSave": {
+    "source.removeUnusedImports": "explicit",
+    "source.addMissingImports.ts": "explicit"
+  }
 }
