--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^18.3.1",
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
+    "react-onesignal": "^3.0.1",
     "react-responsive": "^10.0.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
